--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -2,12 +2,13 @@
     padding: 0.8em;
     border-radius: 5px;
     cursor: pointer;
+    border: 1px solid #edededab
 }
 
 .listingsContainer:hover {
-    background-color: #1f2837;
+    background-color: #ededed4b;
     transition-duration: 0.3s;
-    color: white;
+    color: rgba(0, 0, 0, 0.683);
 }
 
 .propertyImage {
