--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,5 +1,76 @@
 @import url(https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700&display=swap);
 
+/* Spinner Section */
+.spinner-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(135deg, #010102, #1e293b);
+}
+
+.spinner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.obsidian-spinner {
+  width: 230px;
+  margin-bottom: -2em;
+}
+
+.spinner-heading {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.loading-text {
+  margin-top: 4rem;
+  font-size: 0.875rem;
+  font-family: monospace;
+  color: #f0f0f0;
+}
+
+/* Loading bar */
+.loading-bar-container {
+  width: 80%;
+  background-color: #f0f0f0;
+  height: 10px;
+  border-radius: 5px;
+}
+
+.loading-bar {
+  height: 100%;
+  width: 50%;
+  background: linear-gradient(135deg, #273a67, #6f97d7);
+  box-shadow: inset 0 0 50px #fff,
+              inset 20px 0 80px #6cf3ff,
+              inset -20px 0 80px #0ff,
+              inset 20px 0 300px rgb(123, 255, 235),
+              inset -20px 0 300px #0ff,
+              0 0 50px #fff,
+              -10px 0 80px #6cf3ff,
+              10px 0 80px #0ff;
+  border-radius: 5px;
+  animation: loading 7s infinite;
+}
+
+@keyframes loading {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    width: 0;
+  }
+}
+
 .listingsContainer {
   padding: 0.8em;
   border-radius: 5px;
