refactored into components for DRY && clean code + Added Agents to supabase + client

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -4,3 +4,12 @@
 .font {
     font-family: "League Spartan", sans-serif;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
