--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -47,14 +47,10 @@
   height: 100%;
   width: 50%;
   background: linear-gradient(135deg, #273a67, #6f97d7);
-  box-shadow: inset 0 0 50px #fff,
-              inset 20px 0 80px #6cf3ff,
-              inset -20px 0 80px #0ff,
-              inset 20px 0 300px rgb(123, 255, 235),
-              inset -20px 0 300px #0ff,
-              0 0 50px #fff,
-              -10px 0 80px #6cf3ff,
-              10px 0 80px #0ff;
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #6cf3ff,
+    inset -20px 0 80px #0ff, inset 20px 0 300px rgb(123, 255, 235),
+    inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #6cf3ff,
+    10px 0 80px #0ff;
   border-radius: 5px;
   animation: loading 7s infinite;
 }
@@ -98,5 +94,5 @@
 }
 
 .activeFont {
-    font-family: "League Spartan", sans-serif;
+  font-family: "League Spartan", sans-serif;
 }
