cleaning out css comments + adding new comment to describe better the choice I made

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -5,6 +5,7 @@
     font-family: "League Spartan", sans-serif;
 }
 
+/* Used these to take out the gray built in bar */
 .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
